--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,6 @@ pyserial
 twisted
 xmpppy
 #for nest
-eusful==0.6
-pyenest
-
+#eusful==0.6
+#pyenest
+-e git://github.com/jcollie/pyjnest.git#egg=pyjnest
