--- a/requirements.txt
+++ b/requirements.txt
@@ -13,4 +13,4 @@ twisted
 requests
 -e git://github.com/jcollie/pyjnest.git#egg=pyjnest
 -e git+https://github.com/zonyl/pyharmony.git#egg=pyharmony
-
+interruptingcow
