--- a/requirements.txt
+++ b/requirements.txt
@@ -14,3 +14,6 @@ requests
 -e git://github.com/jcollie/pyjnest.git#egg=pyjnest
 -e git+https://github.com/zonyl/pyharmony.git#egg=pyharmony
 interruptingcow
+#-e git://github.com/pettazz/pygooglevoice.git#egg=pygooglevoice
+-e git://github.com/MikeRixWolfe/pygooglevoice.git#egg=pygooglevoice
+
