--- a/PyHomeRemote/AndroidManifest.xml
+++ b/PyHomeRemote/AndroidManifest.xml
@@ -7,16 +7,21 @@
     <uses-sdk
         android:minSdkVersion="14"
         android:targetSdkVersion="17" />
-  <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.INTERNET" >
     </uses-permission>
+
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
-        <activity android:name="com.aknowledge.v1.automation.SettingsActivity" android:label="@string/title_activity_settings">
-        </activity><activity
+        <activity
+            android:name="com.aknowledge.v1.automation.SettingsActivity"
+            android:label="@string/title_activity_settings" >
+        </activity>
+        <activity
             android:name="com.aknowledge.v1.automation.RemoteActivity"
             android:label="@string/app_name" >
             <intent-filter>
@@ -24,6 +29,10 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name="com.aknowledge.v1.automation.TestAPIActivity"
+            android:label="@string/title_activity_test_api" >
         </activity>
     </application>
 
