--- a/PyHomeRemote/AndroidManifest.xml
+++ b/PyHomeRemote/AndroidManifest.xml
@@ -6,13 +6,14 @@
 
     <uses-sdk
         android:minSdkVersion="14"
-        android:targetSdkVersion="17" />
+        android:targetSdkVersion="14" />
 
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.INTERNET" >
     </uses-permission>
 
     <application
+        android:name="com.aknowledge.v1.automation.PyHomeController"
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
