--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
 #To install please use: 
 #  $ pip install -r requirements.txt
-apscheduler
+apscheduler >= 3.0
 pytz
 mock
+ephem
 pyephem
 pyserial
 twisted
